for threshold: Bug Fix: progress bar not showing when showProgressBarBool is TRUE

--- a/components/css/progressBar.css
+++ b/components/css/progressBar.css
@@ -7,7 +7,7 @@
   background-color: #d8d8d8;
   border-radius: 5px;
   border: 1px solid black;
-  /* z-index: 1000; */
+  z-index: 1000;
 }
 
 #progressBar {
@@ -17,5 +17,5 @@
   width: 100%;
   background-color: #00ff00;
   border-radius: 5px;
-  /* z-index: 1000; */
+  z-index: 1000;
 }
